--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.2.0
 asgiref==3.8.1
 billiard==4.2.0
 celery==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -14,6 +16,9 @@ django-filter==24.2
 django-redis==5.4.0
 djangorestframework==3.15.2
 drf-yasg==1.21.7
+factory-boy==3.3.0
+Faker==26.0.0
+idna==3.7
 inflection==0.5.1
 kombu==5.3.7
 packaging==24.1
@@ -23,10 +28,12 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.7
+requests==2.32.3
 setuptools==71.1.0
 six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.2
 vine==5.1.0
 wcwidth==0.2.13
